--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,32 +6,45 @@ on:
     - master
 
 jobs:
-  build:
+  main:
     runs-on: ubuntu-latest
-    
-    strategy:
-      matrix:
-        node-version: [8.x, 10.x, 14.x]
         
     steps:
-    - uses: actions/checkout@v1
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
-    - name: NPM Install
-      run: |
-        npm install
-    - name: Production Build
-      run: |
-        npm run-script build
-    - name: Deploy to S3
-      uses: jakejarvis/s3-sync-action@master
-      with:
-        args: --acl public-read --follow-symlinks --delete
-      env:
-        AWS_S3_BUCKET: ${{ secrets.AWS_PRODUCTION_BUCKET_NAME }}
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        AWS_REGION: 'ap-southeast-1'
-        SOURCE_DIR: 'build'
+      - name: checkout (latest)
+        uses: actions/checkout@v1
+
+      - name: use Node 12 (LTS)
+        uses: actions/setup-node@v1
+        with:
+          node-version: 12.x
+
+      - name: use cached node_modules
+        uses: actions/cache@v1
+        with:
+          path: node_modules
+          key: nodeModules-${{hashFiles('./package-lock.json')}}
+          restore-keys: |
+            nodeModules-
+      - name: install dependencies
+        run: npm install --ignore-scripts
+        env:
+          CI: true
+      - name: build
+        run: npm run build
+        env:
+          CI: true
+
+      - name: setup AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{secrets.AWS_ACCESS_KEY_ID}}
+          aws-secret-access-key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
+          aws-region: ${{secrets.AWS_REGION}}
+      
+      - name: deploy
+        run: |
+          aws s3 sync --delete ./build s3://${{secrets.AWS_PRODUCTION_BUCKET_NAME}}
+          aws cloudfront create-invalidation \
+            --region ${{secrets.AWS_REGION}} \
+            --distribution-id ${{secrets.AWS_CF_ID}} \
+            --paths "/*"
